--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
+@import url("./fonts/awesome/css/font-awesome.css");
+@import url("./fonts/index.css");
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-}
+  font-family: sans-serif; }
